# evo-trainer

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  docker-compose.override.yml  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: api-evaluation.md  cloud-cost-estimate.md  integration-analysis.md  tooling-inventory.md
docs/implementation/: README.md  master-implementation-spec.md  phase-0-foundation.md  phase-1-core-evolution.md  phase-10-crowding-benchmarks.md  phase-11-live-trading.md  phase-12-extensions.md  phase-2-data-signals.md  phase-3-meta-selector.md  phase-4-position-sizing.md  phase-5-dashboards.md  phase-6-paper-trading.md  phase-7-orchestrator.md  phase-8-incubator.md  phase-9-signal-expansion.md  profitability-contract.md
docs/plans/: 2026-03-29-evolve-trader-master-plan.md  phase-0-exploration.md  phase-1-core-evolution.md  phase-10-crowding-benchmarks.md  phase-11-live-trading.md  phase-12-extensions.md  phase-2-data-signals.md  phase-3-meta-selector.md  phase-4-position-sizing.md  phase-5-dashboards.md  phase-6-paper-trading.md  phase-7-orchestrator.md  phase-8-incubator.md  phase-9-signal-expansion.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: Card.tsx  DataTable.tsx  MetricCard.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/lib/: tokens.ts
src/evolve_trader/: __init__.py
src/evolve_trader/core/: __init__.py  analyzer.py  baseline.py  evolution_loop.py  execution_costs.py  fitness.py  llm_evolution_driver.py  llm_logger.py  market_data.py  profitability_gate.py  replay.py  risk_constraints.py  validation.py  version_dag.py
src/evolve_trader/dashboard/: __init__.py  api.py
src/evolve_trader/db/: __init__.py  converters.py  engine.py  models.py  repositories.py
src/evolve_trader/discovery/: __init__.py
src/evolve_trader/execution/: __init__.py  alpaca_client.py  pipeline.py  promotion.py  trade_intent.py
src/evolve_trader/incubator/: __init__.py  research_ledger.py  tournament.py
src/evolve_trader/monitoring/: __init__.py
src/evolve_trader/orchestrator/: __init__.py  adjustment_log.py  counterfactual.py  metrics.py  orchestrator.py
src/evolve_trader/regime/: __init__.py  classifier.py
src/evolve_trader/selection/: __init__.py  conflict.py  lifecycle.py  meta_selector.py  scoring.py
src/evolve_trader/signals/: __init__.py  decay.py  registry.py  types.py
src/evolve_trader/sizing/: __init__.py  (+2 more)
tests/integration/: test_congressional_live.py  test_evolution_loop.py  test_llm_evolution.py  test_meta_selector_pipeline.py  test_phase6_pipeline.py  test_real_data.py  test_signal_pipeline.py
tests/unit/: test_analyzer.py  test_baseline_and_costs.py  test_capital_preservation.py  test_dashboard_api.py  test_db_converters.py  test_db_models.py  test_execution_pipeline.py  test_fitness.py  test_incubator.py  test_llm_logger.py  test_meta_selector.py  test_orchestrator.py  test_profitability_gate.py  test_regime_classifier.py  test_risk_constraints.py  test_seed_strategies.py  test_signal_sources.py  test_signal_types.py  test_sizing.py  test_smoke.py  test_strategy_schema.py  test_upstream.py  test_validation.py  test_version_dag.py
(+19 files in other folders)
