[project]
name = "evolve-trader"
version = "0.1.0"
description = "Evolutionary Strategy Discovery via Self-Evolving Agent Skills"
requires-python = ">=3.12"
dependencies = [
    # Core
    "pydantic>=2.0",
    "litellm>=1.0",
    "pyyaml>=6.0",
    # Data
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "black>=23.0",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
]
# Phase 1: replay harness, metrics, market data
phase1 = [
    "quantstats>=0.0.62",
    "empyrical>=0.5.5",
    "yfinance>=0.2.0",
    "ta>=0.10",
]
# Phase 2: persistence, signals, EDGAR, congressional scraping
phase2 = [
    "sqlalchemy>=2.0",
    "alembic>=1.0",
    "piboufilings @ git+https://github.com/Pierre-Bouquet/pibou-filings.git",
    "congressional-trading>=0.1.0",
    "APScheduler>=3.10",
]
# Phase 4: portfolio optimization
phase4 = [
    "PyPortfolioOpt>=1.5",
]
# Phase 5: dashboard API
phase5 = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "httpx>=0.24",
]
# Phase 6+: brokerage
phase6 = [
    "alpaca-py>=0.20",
]
# Phase 8: evolutionary incubator
phase8 = [
    "deap>=1.4",
]
# All phases combined
all = [
    "evolve-trader[phase1,phase2,phase4,phase5,phase6,phase8]",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["scipy.*", "empyrical.*", "quantstats.*", "pandas.*", "piboufilings.*", "congressional_trading.*", "yfinance.*", "alpaca.*"]
ignore_missing_imports = true

[tool.black]
line-length = 100
